--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
     <head>
         <title>SR20x Mission Generator</title>
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-        <link rel="stylesheet" type="text/css" href="css/android.css" media="only screen and (max-width: 480px)" />
-        <link rel="stylesheet" type="text/css" href="css/desktop.css" media="screen and (min-width: 481px)" />
+        <link rel="stylesheet" type="text/css" href="css/android.css" />
         <!--[if IE]>
             <link rel="stylesheet" type="text/css" href="explorer.css" media="all" />
         <![endif]-->
