--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <script type="text/javascript" src="js/jquery.js"></script><!-- contains the jQuerry Library -->
         <script type="text/javascript" src="js/android.js"></script><!-- Stark provided information --> 
         <script type="text/javascript" src="js/sr20x.js"></script><!-- sr20x specific scripts and functions -->
+		<link rel="Shortcut Icon" href="./favicon.ico"> <!--Favicon -->
+		<link rel="icon" href="./favicon.ico" type="image/x-icon"><!--Favicon Compatiblity-->
+		<link rel="apple-touch-icon" href="./custom_icon.png"/><!--Home Screen Icon-->
     </head>
     <body  onLoad="GenerateMission()">
         <div id="container">
@@ -16,11 +19,18 @@
                 <h1><a href="index.html">SR20X</a></h1><!-- Site Title -->
                 <div id="nav">
                     <ul>
-                        <li><a href="information.html">SR Information</a></li>
+						<li><a href="information.html">SR Information</a></li>
                         <li><a href="missions.html">SR Missions</a></li>
 						<li><a href="reference.html">SR Reference</a></li>
                         <li><a href="http://privateerpress.com/">Privateer Press</a></li>
                     </ul>
+					<ul>
+						Check the mission Types you wish to generate
+						<li><input type="checkbox" name="missionType" checked="checked" value="center" />Center Scenario<br /></li>
+						<li><input type="checkbox" name="missionType" checked="checked" value="dual" />Dual Scenario<br /></li>
+						<li><input type="checkbox" name="missionType" checked="checked" value="distant" />Distant Scenario<br /></li>
+						<li><input type="checkbox" name="missionType" checked="checked" value="radial" />Radial Scenario<br /></li>
+					</ul>
                 </div>
             </div>
             <div id="content">
@@ -28,6 +38,19 @@
 				<button id="GenerateAnotherMission" onClick="GenerateMission()" class="wideButton">Generate Another!!</button>
 				<!-- Mission Table -->
 				<table class="MissionTable" id="MissionTable">
+					<!-- Mission Number -->
+					<tr class="RowHeading">
+						<td>Mission Type</td>
+					</tr>
+					<tr id="MissionTypeBox">
+						<td>************</td>
+					</tr>					
+					<tr class="RowHeading">
+						<td>missionNumber</td>
+					</tr>
+					<tr id="MissionNumber">
+						<td>************</td>
+					</tr>
 					<!-- Mission Name -->
 					<tr class="RowHeading">
 						<td>Mission Name</td>
