--- a/reference.html
+++ b/reference.html
@@ -9,6 +9,9 @@
         <script type="text/javascript" src="js/jquery.js"></script><!-- contains the jQuerry Library -->
         <script type="text/javascript" src="js/android.js"></script><!-- Stark provided information --> 
         <script type="text/javascript" src="js/sr20x.js"></script><!-- sr20x specific scripts and functions -->
+		<link rel="Shortcut Icon" href="./favicon.ico"> <!--Favicon -->
+		<link rel="icon" href="./favicon.ico" type="image/x-icon"><!--Favicon Compatiblity-->
+		<link rel="apple-touch-icon" href="./custom_icon.png"/><!--Home Screen Icon-->
     </head>
     <body  onLoad="GenerateMission()">
         <div id="container">
