--- a/missions.html
+++ b/missions.html
@@ -27,40 +27,51 @@
 
 		</script>
     </head>
-    <body  onLoad="generateMission()">
+    <body>
         <div id="container">
             <div id="header">
                 <h1><a href="index.html">SR20X</a></h1><!-- Site Title -->
                 <div id="nav">
                     <ul>
-						<li><a href="information.html">SR Information</a></li>
+                        <li><a href="information.html">SR Information</a></li>
                         <li><a href="missions.html">SR Missions</a></li>
 						<li><a href="reference.html">SR Reference</a></li>
 						<li><a href="variants.html">SR Variants</a></li>
 						<li><a href="objectives.html">SR Objectives</a></li>
+						<li><a href="/2011/index.html">SR 2011 Archive</a></li>
                         <li><a href="http://privateerpress.com/">Privateer Press</a></li>
                     </ul>
-					<ul>
-						Check the Mission Types you wish to generate
-						<li><input type="checkbox" id="missionTypeCenter" checked="checked" />Center Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeDual" checked="checked" value="dual" />Dual Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeDistant" checked="checked" value="distant" />Distant Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeRadial" checked="checked" value="radial" />Radial Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeFlank" checked="checked" value="flank" />Flank Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeObjective" checked="checked" value="objective" />Objective Scenario<br /></li>
-					</ul>
                 </div>
             </div>
             <div id="content">
-                <h2>Generate a Mission</h2> <!-- Page Title -->
-				<button id="GenerateAnotherMission" onClick="generateMission()" class="wideButton">Generate Another!!</button>
+                <h2>Browse Missions</h2> <!-- Page Title -->
+				<select id="HTMLmissionPicker" onchange="displayMission()">
+					<option value="1">Close Quarters</option>
+					<option value="2">Gauntlet</option>
+					<option value="3">Overrun</option>
+					<option value="4">Guidons</option>
+					<option value="5">Supply and Demands</option>
+					<option value="6">Destruction</option>
+					<option value="7">Incursion</option>
+					<option value="8">Process of Elimination</option>
+					<option value="9">Outflank, Outfight, Outlast</option>
+					<option value="10">A Flag Too Far</option>
+					<option value="11">Bunkers</option>
+					<option value="12">Envelopment</option>
+					<option value="13">Demolition</option>
+					<option value="14">Incoming</option>
+					<option value="15">Restoration</option>
+					<option value="16">Command and Control</option>
+					<option value="17">Diversion</option>
+					<option value="18">Sacrifice</option>
+				</select>
 				<!-- Mission Table -->
 				<table class="MissionTable" id="MissionTable">
 					<!-- Mission Number -->
 					<tr class="RowHeading">
 						<td>Mission Type</td>
 					</tr>
-					<tr id="MissionTypeBox">
+					<tr id="MissionType">
 						<td>************</td>
 					</tr>					
 					<!-- Mission Name -->
@@ -93,15 +104,14 @@
 					</tr>
 					
 				</table>
-				<div id="footer">
-					<ul>
-						<li>Page updated 1/27/12, SR Version 2012 1.2</li>
-						<li><a href="http://privateerpress.com/">Privateer Press</a></li>
-						<li><a href="legal.html">Legal</a></li>
-						<li class="last"><a href="http://z1g1.net">z1g1</a></li>
-					</ul>
-				</div>
-			</div>
+            <div id="footer">
+                <ul>
+                    <li>Page updated 1/27/12, SR Version 2012 1.2</li>
+					<li><a href="http://privateerpress.com/">Privateer Press</a></li>
+                    <li><a href="legal.html">Legal</a></li>
+                    <li class="last"><a href="http://z1g1.net">z1g1</a></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
