This comitt adds the appcache file and the htaccess file to allow for offline access.  The modifications to the sr20x.appchache file has been incremented to version 0.5 since a manifest file needs to be modified to ensure that the browser checks for new files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html manifest="sr20x.appcache">
     <head>
         <title>SR20x Mission Generator</title>
         <meta name="viewport" content="user-scalable=no, width=device-width" />
