--- a/information.html
+++ b/information.html
@@ -1,4 +1,4 @@
-<html>
+<html manifest="sr20x.appcache">
     <head>
         <title>SR20x Mission Generator</title>
         <meta name="viewport" content="user-scalable=no, width=device-width" />
