This comit changes the way in which information is displayed.  Information is now pulled from an XML file insted of hardcoded into HTML.  This will allow for information to be stored in a cookie.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div id="content">
-                <h2>Generate a Mission</h2> <!-- Page Title -->
+                <h2>Generate a Mission for</h2> <!-- Page Title -->
 				<button id="GenerateAnotherMission" onClick="generateMission()" class="wideButton">Generate Another!!</button>
 				<!-- Mission Table -->
 				<table class="MissionTable" id="MissionTable">
