--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html manifest="sr20x.appcache">
+<!--<html manifest="sr20x.appcache">-->
+<html>
     <head>
         <title>SR20x Mission Generator</title>
         <meta name="viewport" content="user-scalable=no, width=device-width" />
@@ -27,28 +28,22 @@
 
 		</script>
     </head>
-    <body  onLoad="generateMission()">
+    <body onLoad="generateMission(); printNavigation()">
         <div id="container">
             <div id="header">
                 <h1><a href="index.html">SR20X</a></h1><!-- Site Title -->
-                <div id="nav">
-                    <ul>
-						<li><a href="information.html">SR Information</a></li>
-                        <li><a href="missions.html">SR Missions</a></li>
-						<li><a href="reference.html">SR Reference</a></li>
-						<li><a href="variants.html">SR Variants</a></li>
-						<li><a href="objectives.html">SR Objectives</a></li>
-                        <li><a href="http://privateerpress.com/">Privateer Press</a></li>
-                    </ul>
-					<ul>
-						Check the Mission Types you wish to generate
-						<li><input type="checkbox" id="missionTypeCenter" checked="checked" />Center Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeDual" checked="checked" value="dual" />Dual Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeDistant" checked="checked" value="distant" />Distant Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeRadial" checked="checked" value="radial" />Radial Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeFlank" checked="checked" value="flank" />Flank Scenario<br /></li>
-						<li><input type="checkbox" id="missionTypeObjective" checked="checked" value="objective" />Objective Scenario<br /></li>
-					</ul>
+			<ul>
+				<div id="ULnavigation"></div>
+	                </ul>
+			<ul>
+				Check the Mission Types you wish to generate
+				<li><input type="checkbox" id="missionTypeCenter" checked="checked" />Center Scenario<br /></li>
+				<li><input type="checkbox" id="missionTypeDual" checked="checked" value="dual" />Dual Scenario<br /></li>
+				<li><input type="checkbox" id="missionTypeDistant" checked="checked" value="distant" />Distant Scenario<br /></li>
+				<li><input type="checkbox" id="missionTypeRadial" checked="checked" value="radial" />Radial Scenario<br /></li>
+				<li><input type="checkbox" id="missionTypeFlank" checked="checked" value="flank" />Flank Scenario<br /></li>
+				<li><input type="checkbox" id="missionTypeObjective" checked="checked" value="objective" />Objective Scenario<br /></li>
+			</ul>
                 </div>
             </div>
             <div id="content">
