--- a/information.html
+++ b/information.html
@@ -28,16 +28,14 @@
 
 		</script>
     </head>
-    <body onLoad="printInformation()">
+    <body onLoad="printInformation(); printNavigation()">
         <div id="container">
             <div id="header">
                 <h1><a href="index.html">SR20X</a></h1><!-- Site Title -->
                 <div id="nav">
-                    <ul>
-                        <li><a href="information.html">SR Information</a></li>
-                        <li><a href="missions.html">SR Missions</a></li>
-                        <li><a href="http://privateerpress.com/">Privateer Press</a></li>
-                    </ul>
+			<ul>
+				<div id="ULnavigation"></div>
+	                </ul>
                 </div>
             </div>
 			<h1>Steamroller 2012 Information</h1>
