--- a/legal.html
+++ b/legal.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Steamroller 2013 Scenario Reference | sr20x.com</title>
+    <title>Legal | sr20x.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -27,7 +27,6 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="static/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="static/ico/favicon.png">
-    
     <!-- Google Analytics Code -->
         <script type="text/javascript">
 
@@ -42,41 +41,37 @@
           })();
         </script>           
     <!-- Google Analytics Code -->
-  </head>
+    </head>
 
-  <body OnLoad="PrintGlossary()">
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-          <div class="container">
-            <button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="#" class="brand">sr20x.com</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li ><a href="index.html">Home</a></li>
-                    <li class="active"><a href="reference.html">Scenario Reference</a></li>
-                    <li><a href="glossary.html">Scenario Glossary</a></li>
-                </ul>
-          </div><!--/.nav-collapse -->
+  <body OnLoad="PrintRandomMission()">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/index.html">sr20x.com</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/sr2014.html">SR2014 Rules</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
-</div>
-    </div>
-
     <div class="container">
     <div class="row">
-        <a name="people"></a>
-        <h2>For People</h2>
+		<div class="col-md-12">
+			<h1>Legal</h1>
+			
+			<h2>For People</h2><a name="people"></a>
             <p>
                 I created this page as a way to learn some mobile web development and because I enjoying playing Warmachine and Hordes.  If there is a legal problem please let me know mail at zackglick.com
             </p>
-        <a name="lawyers"></a>	
-        <h2>For Lawyers</h2>
+			<h2>For Lawyers</h2><a name="lawyers"></a>	
             <p>
                 Contents and Game Rules &copy;2001-2011 Privateer Press Inc. All Rights Reserved. Privateer Press, WARMACHINE&copy;, Cygnar, Khador, Cryx, Protectorate of Menoth, Retribution of Scyrah, HORDES, Circle Orboros, Legion of Everblight, Skorne, Trollbloods, warcaster, warjack, warbeast, and all associated logos and slogans are trademarks of Privateer Press, Inc. Permission is hereby granted to photocopy and retain electronic copies. Any such duplications shall be intended solely for personal, noncommercial use and must maintain all copyrights, trademarks, or other notices contained therein or preserve all marks associated thereof. Privateer Press reserves the right to remove this permission or revise contents herein at any time for any reason.
             </p>
@@ -95,37 +90,22 @@
             <p>
                 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
             </p>
-    </div>
-    </div>
-    
-    </div> <!-- /container -->
+		</div>
+     </div> <!-- /container -->
     <div class="modal-footer">
         <div class="row">
-            <div class="span3">SR Version 2013 1/23/13</div>
-            <div class="span3"><a href="http://privateerpress.com/">Privateer Press</a></div>
-            <div class="span3"><a href="legal.html">Legal</a></div>
-            <div class="span3"><a href="http://z1g1.net">z1g1</a></p></div>
+            <div class="col-md-12">
+			<ul class="list-inline">
+				<li>SR Version 2014 2/1/14</li>
+				<li><a href="http://privateerpress.com/">Privateer Press</a></li>
+				<li><a href="legal.html">Legal</a></li>
+				<li><img style="width:24px;" src="https://g.twimg.com/Twitter_logo_blue.png"></img><a href="twitter.com/z1g1">@z1g1</a></li>			</ul>
+            </div>
         </div>
     </div>
-    <!-- javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap-transition.js"></script>
-    <script src="static/js/bootstrap-alert.js"></script>
-    <script src="static/js/bootstrap-modal.js"></script>
-    <script src="static/js/bootstrap-dropdown.js"></script>
-    <script src="static/js/bootstrap-scrollspy.js"></script>
-    <script src="static/js/bootstrap-tab.js"></script>
-    <script src="static/js/bootstrap-tooltip.js"></script>
-    <script src="static/js/bootstrap-popover.js"></script>
-    <script src="static/js/bootstrap-button.js"></script>
-    <script src="static/js/bootstrap-collapse.js"></script>
-    <script src="static/js/bootstrap-carousel.js"></script>
-    <script src="static/js/bootstrap-typeahead.js"></script>
-    -->
+    <!-- javascript -->
     <script src="static/js/sr20x.js"></script>
+    <script src="static/js/jquery.js"></script>
 
   </body>
 </html>
