--- a/index.html
+++ b/index.html
@@ -44,80 +44,68 @@
     </head>
 
   <body OnLoad="PrintRandomMission()">
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-          <div class="container">
-            <button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="#" class="brand">sr20x.com</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="reference.html">Scenario Reference</a></li>
-                    <li><a href="glossary.html">Scenario Glossary</a></li>
-                </ul>
-          </div><!--/.nav-collapse -->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">sr20x.com</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/sr2014.html">SR2014 Rules</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
-</div>
-    </div>
-
     <div class="container">
     <div class="row">
-      <div class="span12"><h1>Mission Generator</h1></div>
-    </div>
-    <!-- Not working quite yet
-    <div class="row">
-      <div class="span12">Check the Mission Types you wish to generate</div>
-    </div>
-    <div class="row">
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeGuard" checked="checked" value="Guard" /> Guard Scenario<br /></div>
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeAssault" checked="checked" value="Assault" /> Assault Scenario<br /></div>
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeInvade" checked="checked" value="Invade" /> Invade Scenario<br /></div>
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeBorder" checked="checked" value="Border" /> Border Scenario<br /></div>
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeBallance" checked="checked" value="Ballance" /> Ballance Scenario<br /></div>
-        <div class="span4"><input type="checkbox" onchange="AllBoxesChecked()" id="missionTypeLock" checked="checked" value="Lock" /> Lock Scenario<br /></div>
-    </div>
-    -->
+      <div class="col-md-12"><h1>Mission Generator</h1></div>
     <div class="row" id="GenerateMissionButton">
-        <div class="span4 offset1">
+        <div class="col-md-4 offset1">
             <button id="GenerateAnotherMission" onClick="PrintRandomMission()" class="btn btn-primary">Generate Another!!</button>
         </div>
-        <div class="span4">
+        <div class="col-md-4">
             <button id="ToggleRandomSelect" onClick="ToggleRandomOrSelect()" class="btn btn-link">Or Select Mission</button>
         </div>
     </div>
     <div class="row hidden" id="SelectMission">
-        <div class="span4 offset1">
+        <div class="col-md-4 offset1">
             <select id="missionSelector" onchange="PrintSpecificMission()">
-                <option value="0">-- Select Mission --</option>
-                <option value="1">Destruction</option>
-                <option value="2">Supply and Demand</option>
-                <option value="3">Close Quarters</option>
-                <option value="4">Ammunition Run</option>
-                <option value="5">Chemical Reaction</option>
-                <option value="6">Incursion</option>
-                <option value="7">Outflank</option>
-                <option value="8">Incoming</option>
-                <option value="9">Into the Breach</option>
-                <option value="10">Rally Point</option>
-                <option value="11">Process of elimination</option>
-                <option value="12">Fire Support</option>
+				<option value="">Select Mission</option>
+				<option value="0">Destruction</option>
+				<option value="1">Supply and Demand</option>
+				<option value="2">Balance of Power</option>
+				<option value="3">Process of Elimination</option>
+				<option value="4">Close Quarters</option>
+				<option value="5">Two Fronts</option>
+				<option value="6">Incoming</option>
+				<option value="7">Rally Point</option>
+				<option value="8">Incursion</option>
+				<option value="9">Outflank</option>
+				<option value="10">Into the Breach</option>
+				<option value="11">Fire Support</option>
+				<option value="12">Deathmatch (Hardcore)</option>
+				<option value="13">Destruction (Masters)</option>
+				<option value="14">Balance of Power (Masters)</option>
+				<option value="15">Close Quarters (Masters)</option>
+				<option value="16">Incursion (Masters)</option>
+				<option value="17">Outflank (Masters)</option>
+				<option value="18">Fire Support (Masters)</option>
             </select>
         </div>
-        <div class="span4">
+        <div class="col-md-4">
             <button id="ToggleRandomSelect" onClick="ToggleRandomOrSelect()" class="btn btn-link">Or Generate Mission</button>
         </div>        
     </div>
     <!-- Mission Table -->
     <div class="row">
      <!-- Mission Number/Name/Type -->
-         <div class="span12">
+         <div class="col-md-12">
             <h2>Mission</h2>
             <div id="MissionTableNumberNameType"></div>
          </div>            
@@ -125,12 +113,12 @@
      
      <div class="row">
         <!-- Special Rules -->
-        <div class="span6">
+        <div class="col-md-6">
             <h2>Special Rules</h2>
             <div id="MissionTableRules"></div>
         </div>
         <!-- Victory Conditions -->
-         <div class="span6">
+         <div class="col-md-6">
             <h2>Victory Conditions</h2>
             <div id="MissionTableVictory"></div>
          </div>
@@ -138,41 +126,28 @@
  
     <!-- Tactical Tips -->
     <div class="row">
-         <div class="span12 text-warning" id="MissionTableTacticalTip"></div>
+         <div class="col-md-12 text-warning" id="MissionTableTacticalTip"></div>
     </div>    
      <!-- Map and Objective-->
     <div class="row">
-         <div class="span8" id="MissionTableMap"></div>
-         <div class="span4" id="MissionTableObjective"></div>
+         <div class="col-md-8" id="MissionTableMap"></div>
+         <div class="col-md-4" id="MissionTableObjective"></div>
     </div>
     </div><!--/mission table-->
 
     </div> <!-- /container -->
     <div class="modal-footer">
         <div class="row">
-            <div class="span3">SR Version 2014 1/23/13</div>
-            <div class="span3"><a href="http://privateerpress.com/">Privateer Press</a></div>
-            <div class="span3"><a href="legal.html">Legal</a></div>
-            <div class="span3"><a href="http://z1g1.net">z1g1</a></p></div>
+            <div class="col-md-12">
+			<ul class="list-inline">
+				<li>SR Version 2014 2/1/14</li>
+				<li><a href="http://privateerpress.com/">Privateer Press</a></li>
+				<li><a href="legal.html">Legal</a></li>
+				<li><img style="width:24px;" src="https://g.twimg.com/Twitter_logo_blue.png"></img><a href="twitter.com/z1g1">@z1g1</a></li>			</ul>
+            </div>
         </div>
     </div>
-    <!-- javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--
-    <script src="static/js/bootstrap-transition.js"></script>
-    <script src="static/js/bootstrap-alert.js"></script>
-    <script src="static/js/bootstrap-modal.js"></script>
-    <script src="static/js/bootstrap-dropdown.js"></script>
-    <script src="static/js/bootstrap-scrollspy.js"></script>
-    <script src="static/js/bootstrap-tab.js"></script>
-    <script src="static/js/bootstrap-tooltip.js"></script>
-    <script src="static/js/bootstrap-popover.js"></script>
-    <script src="static/js/bootstrap-button.js"></script>
-    <script src="static/js/bootstrap-collapse.js"></script>
-    <script src="static/js/bootstrap-carousel.js"></script>
-    <script src="static/js/bootstrap-typeahead.js"></script>
-    -->
+    <!-- javascript -->
     <script src="static/js/sr20x.js"></script>
     <script src="static/js/jquery.js"></script>
 
