--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Mission Generator
 ---
-
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+    <div class="row">
+      <div class="col-md-12">
+    <div class="row" id="GenerateMissionButton">
+        <div class="col-md-4 offset1">
+            <button id="GenerateAnotherMission" onClick="PrintRandomMission()" class="btn btn-primary">Generate Another!!</button>
+        </div>
+        <div class="col-md-4">
+            <button id="ToggleRandomSelect" onClick="ToggleRandomOrSelect()" class="btn btn-link">Or Select Mission</button>
+        </div>
+    </div>
+    <div class="row hidden" id="SelectMission">
+        <div class="col-md-4 offset1">
+            <select id="missionSelector" onchange="PrintSpecificMission()">
+				<option value="">Select Mission</option>
+				<option value="0">Destruction</option>
+				<option value="1">Supply and Demand</option>
+				<option value="2">Balance of Power</option>
+				<option value="3">Process of Elimination</option>
+				<option value="4">Close Quarters</option>
+				<option value="5">Two Fronts</option>
+				<option value="6">Incoming</option>
+				<option value="7">Rally Point</option>
+				<option value="8">Incursion</option>
+				<option value="9">Outflank</option>
+				<option value="10">Into the Breach</option>
+				<option value="11">Fire Support</option>
+				<option value="12">Deathmatch (Hardcore)</option>
+				<option value="13">Destruction (Masters)</option>
+				<option value="14">Balance of Power (Masters)</option>
+				<option value="15">Close Quarters (Masters)</option>
+				<option value="16">Incursion (Masters)</option>
+				<option value="17">Outflank (Masters)</option>
+				<option value="18">Fire Support (Masters)</option>
+            </select>
+        </div>
+        <div class="col-md-4">
+            <button id="ToggleRandomSelect" onClick="ToggleRandomOrSelect()" class="btn btn-link">Or Generate Mission</button>
+        </div>        
+    </div>
+    <!-- Mission Table -->
+    <div class="row">
+     <!-- Mission Number/Name/Type -->
+         <div class="col-md-12">
+            <h2>Mission</h2>
+            <div id="MissionTableNumberNameType"></div>
+         </div>            
+     </div>
+     <div class="row">
+        <!-- Special Rules -->
+        <div class="col-md-6">
+            <h2>Special Rules</h2>
+            <div id="MissionTableRules"></div>
+        </div>
+        <!-- Victory Conditions -->
+         <div class="col-md-6">
+            <h2>Victory Conditions</h2>
+            <div id="MissionTableVictory"></div>
+         </div>
+    </div>
+ 
+    <!-- Tactical Tips -->
+    <div class="row">
+         <div class="col-md-12 text-warning" id="MissionTableTacticalTip"></div>
+    </div>    
+     <!-- Map and Objective-->
+    <div class="row">
+         <div class="col-md-8" id="MissionTableMap"></div>
+         <div class="col-md-4" id="MissionTableObjective"></div>
+    </div>
+    </div><!--/mission table-->
+    </div>
